--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
       </style>
       <link rel="canonical" href="index.html">
       <meta name="robots" content="all">
-      <title>Yoo villas</title>
+      <title>Discovery Builders</title>
+      <meta name="description" content="Discovery Builders is the name behind the stunning residences at Discovery’s first-class communities in the world’s most desired destinations. Together, we’ll make sure it surpasses all of your expectations and sparks a lifetime of memories.">
+      <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.html">
+      <link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16x16.png">
       <link crossorigin="use-credentials" rel="manifest" href="manifest.json"/>
       <link rel="mask-icon" href="safari-pinned-tab.html" color="">
       <meta name="msapplication-TileColor" content="">
@@ -1395,6 +1399,17 @@
 		$('#' + $(this).data('tab')).show();
 	  });
 	});
+   $(window).on('scroll', function() {
+      const scrollPosition = $(this).scrollTop();
+      const element = $('header');
+
+      if (scrollPosition > 150) {
+         element.addClass('scrolled');  // Add class when scrolled > 150px
+      } else {
+         element.removeClass('scrolled');  // Remove class when scrolled < 150px
+      }
+   });
+
 </script>
 <style>
 
