--- a/index.html
+++ b/index.html
@@ -1412,7 +1412,12 @@
 
 </script>
 <style>
-
+header.scrolled {
+    background: rgb(255 255 255 / 40%);
+}
+.is-light header.scrolled {
+    background: rgb(0 0 0 / 40%);
+}
 @media(max-width: 500px) {
 	.middlemobimg {
 		height: 550px !important;
