--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                      </div>
                      <div
                         class="scale-grid-item js-scale-ref middlemobimg">
-                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/mainbanner.jpg" src="img/mainbanner.jpg" width="600" height="400" alt="Home"/>
+                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/interior.jpg" src="img/interior.jpg" width="600" height="400" alt="Home"/>
                      </div>
                      <div
                         class="scale-grid-item js-counter hidden s:block">
