--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
          <ul class="uppercase text-17 flex gap-x-28">
             <li>
                <a class="relative pointer-events-auto flex justify-center " href="">
-                  <span>WALKTROUGH</span>
+                  <span>Walkthrough</span>
                   <svg class="absolute w-[2rem] h-[2rem] mt-25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 13">
                      <path d="M7.75,5.75l5.25,.73-5.2,.77,1.28,1.82-1.82-1.32-.78,5.25-.73-5.2-1.83,1.28,1.32-1.82L0,6.48l5.2-.73-1.28-1.82,1.83,1.28L6.48,0l.78,5.2,1.82-1.28-1.32,1.82Z"/>
                   </svg>
@@ -99,7 +99,7 @@
             </li>
             <li>
                <a class="relative pointer-events-auto flex justify-center " href="">
-                  <span>AMMENITIES</span>
+                  <span>Amenities</span>
                   <svg class="absolute w-[2rem] h-[2rem] mt-25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 13">
                      <path d="M7.75,5.75l5.25,.73-5.2,.77,1.28,1.82-1.82-1.32-.78,5.25-.73-5.2-1.83,1.28,1.32-1.82L0,6.48l5.2-.73-1.28-1.82,1.83,1.28L6.48,0l.78,5.2,1.82-1.28-1.32,1.82Z"/>
                   </svg>
@@ -107,7 +107,7 @@
             </li>
             <li>
                <a class="relative pointer-events-auto flex justify-center " href="">
-                  <span>VARIANT</span>
+                  <span>Variants</span>
                   <svg class="absolute w-[2rem] h-[2rem] mt-25" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 13">
                      <path d="M7.75,5.75l5.25,.73-5.2,.77,1.28,1.82-1.82-1.32-.78,5.25-.73-5.2-1.83,1.28,1.32-1.82L0,6.48l5.2-.73-1.28-1.82,1.83,1.28L6.48,0l.78,5.2,1.82-1.28-1.32,1.82Z"/>
                   </svg>
@@ -128,17 +128,17 @@
             </li>
             <li class="w-full">
                <a class="relative pointer-events-auto flex " href="">
-               <span>WALKTROUGH</span>
+               <span>Walkthrough</span>
                </a>
             </li>
             <li class="w-full">
                <a class="relative pointer-events-auto flex " href="">
-               <span>AMMENITIES</span>
+               <span>Amenities</span>
                </a>
             </li>
             <li class="w-full">
                <a class="relative pointer-events-auto flex " href="">
-               <span>VARIANT</span>
+               <span>Variants</span>
                </a>
             </li>
          </ul>
@@ -202,11 +202,11 @@
          <div class="relative bg-white w-full mt-auto s:pt-160  pt-70">
             <div class="t-n-t gutter">
                <div class="uppercase w-full mt-auto justify-center text-12 flex relative s:text-center">
-                  Features & Aminities
+                   Features & Amenities
                </div>
                <div class="relative s:text-center text-center">
                   <h2 class="pt-50 text-35 s:text-54 font-heading leading-none tracking-[-0.04em] breaker js-t-animation">
-                     Features & Aminities
+                      Features & Amenities
                   </h2>
                </div>
             </div>
@@ -1341,6 +1341,9 @@
 	</div>
 </div>
 <div class="fixed inset-0 z-[100] pointer-events-none js-pe"></div>
+<div class="contactfix">
+    <a href="#"><i class="fa fa-phone" aria-hidden="true"></i> CONTACT</a>
+</div>    
 <script type="text/javascript" src="dist/app-f1a7d0c2235b21cbe978.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
@@ -1418,6 +1421,27 @@ header.scrolled {
 .is-light header.scrolled {
     background: rgb(0 0 0 / 40%);
 }
+.contactfix {
+    position: fixed;
+    top: 50%;
+    font-size: 22px;
+    right: 0;
+    z-index: 9;
+    color: #fff;
+    background: #6B5C4E;
+    padding: 8px;
+    height: 55px;
+    width: 175px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+    .contactfix a i {
+        padding: 10px;
+        background: #8A7968;
+        margin-right: 10px;
+    }
 @media(max-width: 500px) {
 	.middlemobimg {
 		height: 550px !important;
