--- a/index.html
+++ b/index.html
@@ -49,23 +49,7 @@
       </style>
       <link rel="canonical" href="index.html">
       <meta name="robots" content="all">
-      <title>Discovery Builders</title>
-      <meta name="description" content="Discovery Builders is the name behind the stunning residences at Discovery’s first-class communities in the world’s most desired destinations. Together, we’ll make sure it surpasses all of your expectations and sparks a lifetime of memories.">
-      <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.html">
-      <link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16x16.png">
-      <link crossorigin="use-credentials" rel="manifest" href="manifest.json"/>
-      <link rel="mask-icon" href="safari-pinned-tab.html" color="">
-      <meta name="msapplication-TileColor" content="">
-      <meta name="theme-color" content="">
-      <meta property="og:title" content="">
-      <meta property="og:description" content="">
-      <meta property="og:image" content="">
-      <meta property="og:url" content="">
-      <meta name="twitter:title" content="">
-      <meta name="twitter:description" content="">
-      <meta name="twitter:image" content="">
-      <meta name="twitter:card" content="summary_large_image">
+      <title>YooVillas</title>
       <link rel="stylesheet" href="dist/app-068693e1628f4fa1d5fa.css">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
