--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- Mirrored from yoovillasllc.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Oct 2024 04:20:32 GMT -->
-   <!-- Added by HTTrack -->
    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-   <!-- /Added by HTTrack -->
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=5">
-      <meta name="format-detection" content="telephone=no">
-      <meta http-equiv="Content-Type" content="text/html"/>
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <style>
          @font-face {
          font-family: meta-normal;
@@ -47,15 +41,11 @@
          font-style: normal
          }
       </style>
-      <link rel="canonical" href="index.html">
-      <meta name="robots" content="all">
       <title>YooVillas</title>
       <link rel="stylesheet" href="dist/app-068693e1628f4fa1d5fa.css">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
-   <body></body>
-   <!-- Mirrored from yoovillasllc.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 26 Oct 2024 04:21:06 GMT -->
-</html>
+   <body>
 <header class="fixed z-[98] w-full px-20 py-18 pointer-events-none">
    <div class="nav-inner flex w-full justify-between">
       <a href="index.html" aria-label="Discovery Builders" class="pointer-events-auto block mt-5 w-[7.8rem] s:w-[9.4rem]">
