--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                </div>
             </div>
          </div>
-         <div class="relative bg-white w-full mt-auto">
+         <div class="varianttabs relative bg-white w-full mt-auto">
             <div class="px-20 relative overflow-hidden z-1 grid grid-cols-12 justify-end pt-20 s:pt-200 pb-20 s:pt-200">
                <div class="col-span-12 s:col-span-5">
                   <div class="uppercase text-25 flex">
@@ -239,10 +239,10 @@
                   <h2 class="js-t-animation pt-120 s:pt-0 pb-10 text-50 s:text-80 font-heading leading-none tracking-[-0.03em] max-w-[30rem] s:max-w-full">Yoo Villa Variants</h2>
                   <ul class="tabs flex mb-20 pb-20">
                      <li>
-                        <div class="tabitem"><span class="flex p-13 active borderbtn px-35 text-face tab" data-tab="villa-2">Villa 2</span></div>
+                        <div class="tabitem"><span class="flex p-13 active borderbtn px-35 text-face tab" data-villa="villa-2">Villa 2</span></div>
                      </li>
                      <li>
-                        <div class="tabitem"><span class="flex p-13 borderbtn px-35 text-face tab" data-tab="villa-3">Villa 3</span></div>
+                        <div class="tabitem"><span class="flex p-13 borderbtn px-35 text-face tab" data-villa="villa-3">Villa 3</span></div>
                      </li>
                   </ul>
                   <div class="pdtextleft txt pr-20 s:pr-100 pl-40 s:pl-0">
@@ -260,7 +260,7 @@
 							<div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
 							<figure
 								class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa1.png" src="img/villa1.png" width="1440" height="1920" alt="Stevens Media Room 3"/>
+								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa1.jpg" src="img/v2/villa1.jpg" width="1440" height="1920" alt="Stevens Media Room 3"/>
 							</figure>
 							</div>
 						</div>
@@ -270,7 +270,7 @@
 							<div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 10rem">
 							<figure
 								class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa2.png" src="img/villa2.png" width="1440" height="1920" alt="Stevens Bath 19"/>
+								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa2.jpg" src="img/v2/villa2.jpg" width="1440" height="1920" alt="Stevens Bath 19"/>
 							</figure>
 							</div>
 						</div>
@@ -280,7 +280,7 @@
 							<div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
 							<figure
 								class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa3.png" src="img/villa3.png" width="1440" height="1920" alt="Stevens Living 3"/>
+								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa3.jpg" src="img/v2/villa3.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
 							</figure>
 							</div>
 						</div>
@@ -290,7 +290,7 @@
 							<div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 10rem">
 							<figure
 								class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa4.png" src="img/villa4.png" width="1440" height="1920" alt="Stevens Living 3"/>
+								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa4.jpg" src="img/v2/villa4.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
 							</figure>
 							</div>
 						</div>
@@ -300,7 +300,7 @@
 							<div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
 							<figure
 								class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa5.png" src="img/villa5.png" width="1440" height="1920" alt="Stevens Living 3"/>
+								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa5.jpg" src="img/v2/villa5.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
 							</figure>
 							</div>
 						</div>
@@ -310,7 +310,28 @@
 							<div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 10rem">
 							<figure
 								class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa6.png" src="img/villa6.png" width="1440" height="1920" alt="Stevens Living 3"/>
+								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa6.jpg" src="img/v2/villa6.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
+							</figure>
+							</div>
+						</div>
+					</div>
+					<div class="slide-item pl-20">
+						<div class="w-full overflow-hidden js-s-image-mask" data-delay="0.2">
+							<div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
+							<figure
+								class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
+								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa7.jpg" src="img/v2/villa7.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
+							</figure>
+							</div>
+						</div>
+					</div>
+               
+					<div class="slide-item pl-20">
+						<div class="w-full overflow-hidden js-s-image-mask" data-delay="0.2">
+							<div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 10rem">
+							<figure
+								class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
+								<img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v2/villa8.jpg" src="img/v2/villa8.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
 							</figure>
 							</div>
 						</div>
@@ -328,7 +349,7 @@
 						   <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
 						   <figure
 							   class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa1.png" src="img/villa1.png" width="1440" height="1920" alt="Stevens Media Room 3"/>
+							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v3/villa1.jpg" src="img/v3/villa1.jpg" width="1440" height="1920" alt="Stevens Media Room 3"/>
 						   </figure>
 						   </div>
 					   </div>
@@ -338,7 +359,7 @@
 						   <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 10rem">
 						   <figure
 							   class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa2.png" src="img/villa2.png" width="1440" height="1920" alt="Stevens Bath 19"/>
+							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v3/villa2.jpg" src="img/v3/villa2.jpg" width="1440" height="1920" alt="Stevens Bath 19"/>
 						   </figure>
 						   </div>
 					   </div>
@@ -348,7 +369,7 @@
 						   <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
 						   <figure
 							   class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa3.png" src="img/villa3.png" width="1440" height="1920" alt="Stevens Living 3"/>
+							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v3/villa3.jpg" src="img/v3/villa3.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
 						   </figure>
 						   </div>
 					   </div>
@@ -358,7 +379,7 @@
 						   <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 10rem">
 						   <figure
 							   class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa4.png" src="img/villa4.png" width="1440" height="1920" alt="Stevens Living 3"/>
+							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v3/villa4.jpg" src="img/v3/villa4.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
 						   </figure>
 						   </div>
 					   </div>
@@ -368,7 +389,7 @@
 						   <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
 						   <figure
 							   class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa5.png" src="img/villa5.png" width="1440" height="1920" alt="Stevens Living 3"/>
+							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v3/villa5.jpg" src="img/v3/villa5.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
 						   </figure>
 						   </div>
 					   </div>
@@ -378,7 +399,17 @@
 						   <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 10rem">
 						   <figure
 							   class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
-							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/villa6.png" src="img/villa6.png" width="1440" height="1920" alt="Stevens Living 3"/>
+							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v3/villa6.jpg" src="img/v3/villa6.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
+						   </figure>
+						   </div>
+					   </div>
+				   </div>
+				   <div class="slide-item pl-20">
+					   <div class="w-full overflow-hidden js-s-image-mask" data-delay="0.2">
+						   <div class="overflow-hidden js-image-mask w-full h-full" style="margin-top: 0rem">
+						   <figure
+							   class="overflow-hidden h-full min-h-[32rem] max-h-[32rem] s:min-h-[80rem] s:max-h-[80rem] relative js-image-scale">
+							   <img class="w-full absolute top-0 left-0 js-lazy" data-src="img/v3/villa7.jpg" src="img/v3/villa7.jpg" width="1440" height="1920" alt="Stevens Living 3"/>
 						   </figure>
 						   </div>
 					   </div>
@@ -431,18 +462,18 @@
 						</div>
 					</div>
 				</div>
-				<div class="px-20 relative overflow-hidden z-1 grid grid-cols-12 justify-end pt-20">
+				<div class="urbantabs px-20 relative overflow-hidden z-1 grid grid-cols-12 justify-end pt-20">
 					<div class="col-span-12 s:col-span-5"></div>
 					<div class="col-span-12 s:col-span-5">
 						<ul class="tabs flex mb-20 pb-20">
 							<li>
-							   <div class="tabitem"><span class="flex p-13 active borderbtn px-35 text-white border-face tab" data-image="urban">Urban</span></div>
+							   <div class="tabitem"><span  data-image="urban" class="flex p-13 active borderbtn px-35 text-white border-face tab">Urban</span></div>
 							</li>
 							<li>
-							   <div class="tabitem"><span class="flex p-13 borderbtn px-35 text-white border-face tab" data-image="See-Breeze">See Breeze</span></div>
+							   <div class="tabitem"><span  data-image="breeze" class="flex p-13 borderbtn px-35 text-white border-face tab">See Breeze</span></div>
 							</li>
 							<li>
-							   <div class="tabitem"><span class="flex p-13 borderbtn px-35 text-white border-face tab" data-image="Vintage">Vintage</span></div>
+							   <div class="tabitem" ><span data-image="vintage" class="flex p-13 borderbtn px-35 text-white border-face tab">Vintage</span></div>
 							</li>
 						 </ul>
 						 <div class="contentgrp text-white leading-[1.5] mb-40">
@@ -469,38 +500,38 @@
 						</div>
 					</div>
 				</div>
-				<div id="See-Breeze" class="imgcontent" style="display: none;">
-					<div class="px-20 relative overflow-hidden z-1 grid grid-cols-12 justify-end pt-20 pb-70">
-						<div class="col-span-12 s:col-span-4">
+				<div id="breeze" class="imgcontent" style="display: none;">
+					<div class="relative z-1 flex justify-center pt-20 pb-70">
+						<div class="px-20 col-span-12 s:col-span-4 mb-2neg">
 							<div class="image">
 								<img src="img/urban1.png" alt="Image">
 							</div>
 						</div>
-						<div class="col-span-12 s:col-span-4">
+						<div class="px-20 col-span-12 s:col-span-4 mt-20">
 							<div class="image">
 								<img src="img/urban2.png" alt="Image">
 							</div>
 						</div>
-						<div class="col-span-12 s:col-span-4">
+						<div class="px-20 col-span-12 s:col-span-4  mt-50 pt-30">
 							<div class="image">
 								<img src="img/urban3.png" alt="Image">
 							</div>
 						</div>
 					</div>
 				</div>
-				<div id="Vintage" class="imgcontent" style="display: none;">
-					<div class="px-20 relative overflow-hidden z-1 grid grid-cols-12 justify-end pt-20 pb-70">
-						<div class="col-span-12 s:col-span-8">
+				<div id="vintage" class="imgcontent" style="display: none;">
+					<div class="relative z-1 flex justify-center pt-20 pb-70">
+						<div class="px-20 col-span-12 s:col-span-4 mb-2neg">
 							<div class="image">
 								<img src="img/urban1.png" alt="Image">
 							</div>
 						</div>
-						<div class="col-span-12 s:col-span-4">
+						<div class="px-20 col-span-12 s:col-span-4 mt-20">
 							<div class="image">
 								<img src="img/urban2.png" alt="Image">
 							</div>
 						</div>
-						<div class="col-span-12 s:col-span-4">
+						<div class="px-20 col-span-12 s:col-span-4  mt-50 pt-30">
 							<div class="image">
 								<img src="img/urban3.png" alt="Image">
 							</div>
@@ -1366,14 +1397,26 @@
 </script>
 <script>
 	$(document).ready(function() {
-	  $('.tab').click(function() {
+	  $('.varianttabs .tab').click(function() {
 		// Remove active class from all tabs and add to the clicked tab
-		$('.tab').removeClass('active');
+		$('.varianttabs .tab').removeClass('active');
 		$(this).addClass('active');
   
 		// Hide all villa contents and show the selected one
 		$('.villa-content').hide();
-		$('#' + $(this).data('tab')).show();
+		$('#' + $(this).data('villa')).show();      
+      $('.fillslider').slick('refresh');
+	  });
+	});
+	$(document).ready(function() {
+	  $('.urbantabs .tab').click(function() {
+		// Remove active class from all tabs and add to the clicked tab
+		$('.urbantabs .tab').removeClass('active');
+		$(this).addClass('active');
+  
+		// Hide all villa contents and show the selected one
+		$('.imgcontent').hide();
+		$('#' + $(this).data('image')).show();  
 	  });
 	});
    $(window).on('scroll', function() {
