--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                      </div>
                      <div
                         class="scale-grid-item js-counter hidden s:block">
-                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/feature2.png" src="img/feature2.png" width="600" height="800" alt="Home"/>
+                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/feature2.jpg" src="img/feature2.jpg" width="600" height="800" alt="Home"/>
                      </div>
                      <div
                         class="scale-grid-item js-scale-ref middlemobimg">
@@ -203,15 +203,15 @@
                      </div>
                      <div
                         class="scale-grid-item js-counter hidden s:block">
-                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/feature4.png" src="img/feature4.png" width="600" height="800" alt="Home"/>
+                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/feature4.jpg" src="img/feature4.jpg" width="600" height="800" alt="Home"/>
                      </div>
                      <div
                         class="scale-grid-item js-counter hidden s:block">
-                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/feature5.png" src="img/feature5.png" width="600" height="450" alt="Home"/>
+                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/feature5.jpg" src="img/feature5.jpg" width="600" height="450" alt="Home"/>
                      </div>
                      <div
                         class="scale-grid-item js-counter hidden s:block">
-                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/feature6.png" src="img/feature6.png" width="600" height="450" alt="Home"/>
+                        <img class="w-full h-full absolute top-0 left-0 insert-0 object-cover js-lazy" data-src="img/feature6.jpg" src="img/feature6.jpg" width="600" height="450" alt="Home"/>
                      </div>
                   </div>
                </div>
@@ -504,17 +504,17 @@
 					<div class="relative z-1 flex justify-center pt-20 pb-70">
 						<div class="px-20 col-span-12 s:col-span-4 mb-2neg">
 							<div class="image">
-								<img src="img/urban1.png" alt="Image">
+								<img src="img/breeze1.jpg" alt="Image">
 							</div>
 						</div>
 						<div class="px-20 col-span-12 s:col-span-4 mt-20">
 							<div class="image">
-								<img src="img/urban2.png" alt="Image">
+								<img src="img/breeze2.jpg" alt="Image">
 							</div>
 						</div>
 						<div class="px-20 col-span-12 s:col-span-4  mt-50 pt-30">
 							<div class="image">
-								<img src="img/urban3.png" alt="Image">
+								<img src="img/breeze3.jpg" alt="Image">
 							</div>
 						</div>
 					</div>
@@ -523,17 +523,17 @@
 					<div class="relative z-1 flex justify-center pt-20 pb-70">
 						<div class="px-20 col-span-12 s:col-span-4 mb-2neg">
 							<div class="image">
-								<img src="img/urban1.png" alt="Image">
+								<img src="img/vintage-1.jpg" alt="Image">
 							</div>
 						</div>
 						<div class="px-20 col-span-12 s:col-span-4 mt-20">
 							<div class="image">
-								<img src="img/urban2.png" alt="Image">
+								<img src="img/vintage-2.jpg" alt="Image">
 							</div>
 						</div>
 						<div class="px-20 col-span-12 s:col-span-4  mt-50 pt-30">
 							<div class="image">
-								<img src="img/urban3.png" alt="Image">
+								<img src="img/vintage-3.jpg" alt="Image">
 							</div>
 						</div>
 					</div>
