--- a/v2.html
+++ b/v2.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
    <head>
