--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                <div class="h-full w-full absolute top-0 left-0 js-pr" data-speed="-0.35">
                   <img class="absolute object-cover w-full h-full top-0 left-0" src="img/welcomebanner.jpg" alt="" decoding="async" draggable="false" loading="lazy">
                </div>
-               <div class="absolute z-1 top-230 s:top-0 flex s:items-center justify-center left-0 w-full h-full js-pr" data-speed="-0.5" style="background-image: url('img/welcomebanner.jpg');">
+               <div class="absolute z-1 top-230 s:top-0 flex s:items-center justify-center left-0 w-full h-full js-pr" data-speed="-0.5" style="background-image: url('img/welcomebanner.jpg');background-position: center;background-size: cover;">
                   <div class="relative s:text-left w-full px-20 s:-mt-50">
                      <h1 class="text-70 s:text-135 mb-40 s:mb-30 leading-[1] s:leading-[1.24] font-heading tracking-[-0.04em] js-heading text-white">Elevate<br class="block s:hidden"> <span class="italic">your</span> escape</h1>
                      <p class="text-24 s:text-28 leading-[1.2] s:max-w-[80rem] pb-50 text-white">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata.</p>
